# conda-forge-conda-plugins

./: .gitignore  .pre-commit-config.yaml  License  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.dev.txt
.github/workflows/: tests.yml
conda_forge_conda_plugins/: _version.py  hooks.py
tests/: test_mpich.py  test_openmpi.py
