[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8",
  "tomli>=1.0.0; python_version < '3.11'"
]
build-backend = "setuptools.build_meta"

[project]
name = "conda-forge-conda-plugins"
authors = [
    {name = "Matthew R. Becker", email = "condaforge@gmail.com"},
]
description = "conda plugins for the conda-forge ecosystem"
readme = "README.md"
dynamic = ["version"]
license = {file = "License"}
requires-python = ">=3.9"

[project.urls]
home = "https://github.com/regro/conda-forge-conda-plugins"

[project.entry-points.conda]
conda-forge-conda-plugins = "conda_forge_conda_plugins.hooks"

[tool.setuptools]
packages = {find = {exclude=["tests*"]}}

[tool.setuptools_scm]
write_to = "conda_forge_conda_plugins/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["E", "F", "W"]
preview = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120
